Set up header navigation and container layout Add nav bar with brand and user controls Add nav bar with pb horizontal nav Write config, layout, and component styling Reduce sizing on mobile

--- a/examples/rails-react-example/app/assets/stylesheets/application.scss
+++ b/examples/rails-react-example/app/assets/stylesheets/application.scss
@@ -30,3 +30,12 @@ $extrabold:     700;
 
 @import "reset";
 @import "playbook";
+
+// Configuration
+@import "config/variables";
+
+// Layouts
+@import "layouts/container";
+
+// Components
+@import "components/navbar";
