--- a/examples/rails-react-example/app/views/pages/index.html.erb
+++ b/examples/rails-react-example/app/views/pages/index.html.erb
@@ -1,3 +1,4 @@
-<%= react_component("App") %>
-
-<%= pb_rails("button", props: { text: "Button Primary", margin_right: "lg" }) %>
+<main class="container">
+  <%= pb_rails("caption", props: { text: "Dashboard", color: "lighter" }) %>
+  <%= pb_rails("title", props: { text: "Commerce Dashboard", bold: false }) %>
+</main>
