Add KPIs w/ sidebar and line graph body

--- a/examples/rails-react-example/app/views/pages/index.html.erb
+++ b/examples/rails-react-example/app/views/pages/index.html.erb
@@ -1,4 +1,5 @@
 <main class="container">
   <%= pb_rails("caption", props: { text: "Dashboard", color: "lighter" }) %>
-  <%= pb_rails("title", props: { text: "Commerce Dashboard", bold: false }) %>
+  <%= pb_rails("title", props: { text: "Commerce Dashboard", bold: false, margin_bottom: "md" }) %>
+  <%= render "shared/kpis" %>
 </main>
