--- a/examples/rails-react-example/app/assets/stylesheets/application.scss
+++ b/examples/rails-react-example/app/assets/stylesheets/application.scss
@@ -36,6 +36,8 @@ $extrabold:     700;
 
 // Layouts
 @import "layouts/container";
+@import "layouts/two_column_grid";
+@import "layouts/two_by_two_grid";
 
 // Components
 @import "components/navbar";
