--- a/examples/rails-react-example/app/views/shared/_kpis.html.erb
+++ b/examples/rails-react-example/app/views/shared/_kpis.html.erb
@@ -1,4 +1,4 @@
-<%= pb_rails("card", props: { padding: "none", border_none: true }) do %>
+<%= pb_rails("card", props: { padding: "none", border_none: true, margin_bottom: "sm" }) do %>
     <%= pb_rails("flex", props: {vertical: "center",spacing: "between"}) do %>
         <%= pb_rails("title", props: { text: "Key Performance Indicators", tag: "h4", size: 5, padding: "md" }) %> 
         <%= pb_rails("circle_icon_button", props: {
