--- a/examples/rails-react-example/app/assets/stylesheets/application.scss
+++ b/examples/rails-react-example/app/assets/stylesheets/application.scss
@@ -38,6 +38,7 @@ $extrabold:     700;
 @import "layouts/container";
 @import "layouts/two_column_grid";
 @import "layouts/two_by_two_grid";
+@import "layouts/ticket_escalations";
 
 // Components
 @import "components/navbar";
