--- a/examples/rails-react-example/app/views/pages/index.html.erb
+++ b/examples/rails-react-example/app/views/pages/index.html.erb
@@ -2,6 +2,7 @@
   <%= pb_rails("caption", props: { text: "Dashboard", color: "lighter" }) %>
   <%= pb_rails("title", props: { text: "Commerce Dashboard", bold: false, margin_bottom: "md" }) %>
   <%= render "shared/kpis" %>
+  <%= render "shared/ticket_escalations" %>
   <div class="two-column-grid">
     <%= render "shared/pipeline_chart" %>
     <%= render "shared/two_by_two_grid" %>
