--- a/examples/rails-react-example/app/views/pages/index.html.erb
+++ b/examples/rails-react-example/app/views/pages/index.html.erb
@@ -7,4 +7,5 @@
     <%= render "shared/pipeline_chart" %>
     <%= render "shared/two_by_two_grid" %>
   </div>
+  <%= render "shared/notifications_dialog" %>
 </main>
