Install font awesome free

--- a/examples/rails-react-example/app/assets/stylesheets/application.scss
+++ b/examples/rails-react-example/app/assets/stylesheets/application.scss
@@ -43,3 +43,6 @@ $extrabold:     700;
 // Components
 @import "components/navbar";
 @import "components/kpis_nav_list_item";
+
+// Font Awesome
+@import "font-awesome";
