Rails scaffold tickets

--- a/examples/rails-react-example/app/views/layouts/application.html.erb
+++ b/examples/rails-react-example/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= yield %>
+    <main class="container">
+      <%= yield %>
+    </main>
   </body>
 </html>
