--- a/examples/rails-react-example/app/views/shared/_ticket_escalations_type.erb
+++ b/examples/rails-react-example/app/views/shared/_ticket_escalations_type.erb
@@ -1,4 +1,5 @@
-<div>
+<%# We add a "tickets" id so turbo stream will put newly created tickets in the first column, "New" %>
+<div id="tickets">
   <%= pb_rails("card", props: { padding: "sm", highlight: {position: "side", color:variant}, }) do %>
     <%= pb_rails("flex", props: { justify: "between" }) do %>
       <%= pb_rails("caption", props: { size: 'xs' }) do %>
