--- a/examples/rails-react-example/app/views/shared/_ticket_escalations.html.erb
+++ b/examples/rails-react-example/app/views/shared/_ticket_escalations.html.erb
@@ -12,7 +12,7 @@
 
 
 <%= pb_rails("flex", props: { justify_content: "center" }) do %>
-  <%= pb_rails("caption", props: { text: "This Week's Ticket Escalations", color: "lighter", margin_bottom: "sm" }) %>
+  <%= pb_rails("caption", props: { text: "THIS WEEKS TICKET ESCALATIONS", color: "lighter", margin_bottom: "sm", size: "xs" }) %>
 <% end %>
 
 <div class="ticket-escalations">
