--- a/examples/rails-react-example/app/views/shared/_ticket_escalations_line_item.html.erb
+++ b/examples/rails-react-example/app/views/shared/_ticket_escalations_line_item.html.erb
@@ -10,7 +10,7 @@
               }) %>
           <%= pb_rails("body", props: { text: ticket[:title], truncate: "1", margin_right: "xs" }) %>
         <% end %> 
-        <%= pb_rails("icon", props: { icon: "square-caret-right", fixed_width: true }) %>
+        <%= pb_rails("icon", props: { icon: "hand-point-right", fixed_width: true }) %>
       <% end %>
   <% end %>
 <% end %>
