--- a/examples/rails-react-example/app/views/shared/_kpis.html.erb
+++ b/examples/rails-react-example/app/views/shared/_kpis.html.erb
@@ -24,7 +24,7 @@
             data: [43934, 52503, 57177, 69658, 97031, 119931, 137133, 154175]
         }] %>
 
-        <%= pb_rails("line_graph", props: { id: "line-test", gradient: false, chart_data: data, point_start: 1 }  ) %>
+        <%= pb_rails("line_graph", props: { id: "line-test", gradient: false, chart_data: data, point_start: 1, height: '250' }  ) %>
     <% end %>
     <% end %>
 <% end %>
