--- a/examples/rails-react-example/app/views/shared/_kpis_nav_item_dashboard_value.html.erb
+++ b/examples/rails-react-example/app/views/shared/_kpis_nav_item_dashboard_value.html.erb
@@ -1,22 +1,16 @@
 
 <% is_active = defined?(active) && active %>
-<% card_props = { margin_bottom: "none", padding: "sm", border_radius: "none" } %>
-<% if is_active %>
-  <% card_props[:highlight] = { position: "side", color: "primary_action" } %>
-<% end %>
+<% classes = "kpis_nav_list_item pb_nav_list_kit_item pb_nav_list_item_link#{is_active ? "_active" : ""}" %>
 
-<%= link_to '', onclick: 'event.preventDefault();', class: 'kpis_nav_list_item' do %>
-  <%= pb_rails("card", props: card_props) do %>
-    <%= pb_rails("flex", props: {justify: "between"}) do %>
-      <span class="pb_nav_list_item_text">
-        <%= pb_rails("title", props: { text: label, tag: "h4", size: 4, color: is_active ? "link" : nil }) %>
-      </span>
-      <% if defined?(value) && value != 0 %>
-        <%= pb_rails("dashboard_value", props: {
-          stat_change: { change: type, value: value },
-          classname: "pb_nav_list_item_icon_right",
-      }) %>
-      <% end %>
-    <% end %>    
-  <% end %>
+<%# Use the pb nav/item styling %>
+<%= link_to '', onclick: 'event.preventDefault();', class: classes do %>
+    <span class="pb_nav_list_item_text">
+      <%= pb_rails("title", props: { text: label, tag: "h4", size: 4, classname: "pb_nav_list_item_text" }) %>
+    </span>
+    <% if defined?(value) && value != 0 %>
+      <%= pb_rails("dashboard_value", props: {
+        stat_change: { change: type, value: value },
+        classname: "pb_nav_list_item_icon_right",
+    }) %>
+    <% end %>
 <% end %>
