--- a/examples/rails-react-example/app/views/shared/_ticket_escalations_type.erb
+++ b/examples/rails-react-example/app/views/shared/_ticket_escalations_type.erb
@@ -1,14 +1,15 @@
 <%# We add a "tickets" id so turbo stream will put newly created tickets in the first column, "New" %>
 <div id="tickets">
-  <%= pb_rails("card", props: { padding: "sm", highlight: {position: "side", color:variant}, }) do %>
-    <%= pb_rails("flex", props: { justify: "between" }) do %>
-      <%= pb_rails("caption", props: { size: 'xs' }) do %>
+  <%= pb_rails("card", props: { padding: "sm", highlight: {position: "side", color: variant }, }) do %>
+    <%= pb_rails("flex", props: { justify: "between", align_items: "center" }) do %>
+      <%= pb_rails("caption", props: { size: "sm", classname: "ticket-escalations-header-text" }) do %>
         <%= header %>
       <% end %>
       <%= pb_rails("badge", props: {
         text: tickets&.length || 0,
         variant: variant,
-        rounded: true
+        rounded: true,
+        padding: "xs",
       }) %>
     <% end %>
   <% end %>
@@ -20,17 +21,36 @@
     <% if tickets.count > 6 %>
 
       <%= pb_rails("collapsible") do %>
-        <%= pb_rails("collapsible/collapsible_content", props: { padding: "none", id:"collapsed-toggle" }) do %>
+        <%= pb_rails("collapsible/collapsible_content", props: { padding: "none", id:"collapsed-toggle-#{header}" }) do %>
           <% tickets.drop(6).each do |ticket| %>
             <%= render partial: "shared/ticket_escalations_line_item", locals: { ticket: ticket } %>
           <% end %>
         <% end %>
 
-        <%= pb_rails("collapsible/collapsible_main", props: { padding: "sm", name: "default-main", icon: ["square-caret-down", "square-caret-up"] }) do %>
+        <%= pb_rails("collapsible/collapsible_main", props: { padding: "xs", name: "default-main", icon: ["hand-point-down", "hand-point-up"] }) do %>
           <%= pb_rails("button", props: { text: "Show More", variant:"link", padding: "none"}) %>
         <% end %>
+
+        <div onclick="toggleCollapsibleById('collapsed-toggle-<%= header %>')">
+          <%= link_to '', onclick: 'event.preventDefault();' do %>
+            <%= pb_rails("card", props: { padding: "sm" }) do %>
+              <%= pb_rails("flex", props: { justify_content: "center", align_items: "center" }) do %>
+                <%= pb_rails("body", props: { color: "link" }) do %>
+                  <b>Show More</b>
+                <% end %>
+              <% end %>    
+            <% end %>    
+          <% end %>
+        </div>
+
         
       <% end %>
     <% end %>
   <% end %>
 </div>
+
+<script>
+const toggleCollapsibleById = (id) => {
+  document.dispatchEvent(new CustomEvent(id));
+};
+</script>
