Separate ticket streams to 5

--- a/examples/rails-react-example/app/views/shared/_ticket_escalations.html.erb
+++ b/examples/rails-react-example/app/views/shared/_ticket_escalations.html.erb
@@ -1,5 +1,3 @@
-<%= turbo_stream_from "tickets" %>
-
 <%
   tickets_by_type = @tickets.group_by { |ticket| ticket[:ticket_type] }
 
@@ -16,9 +14,9 @@
 <% end %>
 
 <div class="ticket-escalations">
-  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'New', variant: "success", tickets: new_tickets }  %>
-  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'Manager Feedback', variant: "primary", tickets: manager_feedback_tickets }  %>
-  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'Processing', variant: "warning", tickets: processing_tickets }  %>
-  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'Awaiting Feedback', variant: "error", tickets: awaiting_feedback_tickets }  %>
-  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'Approved', variant: "success", tickets: approved_tickets }  %>
+  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'New', type: 'new', variant: "success", tickets: new_tickets }  %>
+  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'Manager Feedback', type: 'manager_feedback', variant: "primary", tickets: manager_feedback_tickets }  %>
+  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'Processing', type: 'processing', variant: "warning", tickets: processing_tickets }  %>
+  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'Awaiting Feedback', type: 'awaiting_feedback', variant: "error", tickets: awaiting_feedback_tickets }  %>
+  <%= render partial: "shared/ticket_escalations_type", locals: { header: 'Approved', type: 'approved', variant: "success", tickets: approved_tickets }  %>
 </div>
