--- a/examples/rails-react-example/app/views/shared/_ticket_escalations_type.erb
+++ b/examples/rails-react-example/app/views/shared/_ticket_escalations_type.erb
@@ -1,5 +1,4 @@
-<%# We add a "tickets" id so turbo stream will put newly created tickets in the first column, "New" %>
-<div id="tickets">
+<div>
   <%= pb_rails("card", props: { padding: "sm", highlight: {position: "side", color: variant }, }) do %>
     <%= pb_rails("flex", props: { justify: "between", align_items: "center" }) do %>
       <%= pb_rails("caption", props: { size: "sm", classname: "ticket-escalations-header-text" }) do %>
@@ -14,14 +13,17 @@
     <% end %>
   <% end %>
   <%= pb_rails("section_separator") %>
+  <%= turbo_stream_from "tickets#{type}" %>
   <% if tickets&.any? %>
-    <% tickets.take(6).each do |ticket| %>
-      <%= render partial: "shared/ticket_escalations_line_item", locals: { ticket: ticket } %>
-    <% end %>
+    <div id="tickets<%= type %>">
+      <% tickets.take(6).each do |ticket| %>
+        <%= render partial: "shared/ticket_escalations_line_item", locals: { ticket: ticket } %>
+      <% end %>
+    </div>
     <% if tickets.count > 6 %>
 
       <%= pb_rails("collapsible") do %>
-        <%= pb_rails("collapsible/collapsible_content", props: { padding: "none", id:"collapsed-toggle-#{header}" }) do %>
+        <%= pb_rails("collapsible/collapsible_content", props: { padding: "none", id:"collapsed-toggle-#{type}" }) do %>
           <% tickets.drop(6).each do |ticket| %>
             <%= render partial: "shared/ticket_escalations_line_item", locals: { ticket: ticket } %>
           <% end %>
@@ -31,7 +33,7 @@
           <%= pb_rails("button", props: { text: "Show More", variant:"link", padding: "none"}) %>
         <% end %>
 
-        <div onclick="toggleCollapsibleById('collapsed-toggle-<%= header %>')">
+        <div onclick="toggleCollapsibleById('collapsed-toggle-<%= type %>')">
           <%= link_to '', onclick: 'event.preventDefault();' do %>
             <%= pb_rails("card", props: { padding: "sm" }) do %>
               <%= pb_rails("flex", props: { justify_content: "center", align_items: "center" }) do %>
