--- a/examples/rails-react-example/app/views/shared/_navbar.html.erb
+++ b/examples/rails-react-example/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
       <% end %>
     <% end %>
     <%= pb_rails("flex", props: { align: "center", margin_left: "auto" }) do %>
-      <%= link_to '', onclick: 'event.preventDefault();', data: {"open-dialog": "dialog-1"} do %>
+      <%= link_to '', onclick: 'event.preventDefault();', data: {"open-dialog": "dialog-1"}, class: 'open-modal-button' do %>
         <%= pb_rails("flex") do %>
           <%= pb_rails("icon", props: { icon: "bell", fixed_width: true }) %>
           <%= pb_rails("badge", props: {
