--- a/examples/rails-react-example/app/views/tickets/_form.html.erb
+++ b/examples/rails-react-example/app/views/tickets/_form.html.erb
@@ -21,8 +21,10 @@
     <%= form.text_area :content %>
   </div>
 
-  <%= form.select :ticket_type, ['new', 'manager_feedback', 'processing', 'awaiting_feedback', 'approved'] %>
-
+  <div>
+    <%= form.label :ticket_type, style: "display: block" %>
+    <%= form.select :ticket_type, ['new', 'manager_feedback', 'processing', 'awaiting_feedback', 'approved'] %>
+  </div>
   <div>
     <%= form.label :user_name, style: "display: block" %>
     <%= form.text_field :user_name %>
