Replace form_with w/ pb_form_with

--- a/examples/rails-react-example/app/assets/stylesheets/application.scss
+++ b/examples/rails-react-example/app/assets/stylesheets/application.scss
@@ -43,6 +43,7 @@ $extrabold:     700;
 // Components
 @import "components/navbar";
 @import "components/kpis_nav_list_item";
+@import "tickets/tickets";
 
 // Font Awesome
 @import "font-awesome";
