--- a/examples/rails-react-example/app/views/tickets/_form.html.erb
+++ b/examples/rails-react-example/app/views/tickets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: ticket) do |form| %>
+<%= pb_form_with(model: ticket) do |form| %>
   <% if ticket.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(ticket.errors.count, "error") %> prohibited this ticket from being saved:</h2>
@@ -23,7 +23,7 @@
 
   <div>
     <%= form.label :ticket_type, style: "display: block" %>
-    <%= form.select :ticket_type, ['new', 'manager_feedback', 'processing', 'awaiting_feedback', 'approved'] %>
+    <%= form.select :ticket_type, [ ['New', 'new'], ['Manager Feedback', 'manager_feedback'], ['Processing', 'processing'], ['Awaiting Feedback', 'awaiting_feedback'], ['Approved', 'approved'] ] %>
   </div>
   <div>
     <%= form.label :user_name, style: "display: block" %>
@@ -35,7 +35,7 @@
     <%= form.text_field :user_image %>
   </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
+  <%= form.actions do |action| %>
+    <%= action.submit %>
+  <% end %>
 <% end %>
